--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>UFO Finder</title>
+  <title>Find a Real UFO Near You!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -17,13 +17,22 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">UFO Sightings
             <img class="nav-ufo" src="static/images/ufo.svg">
+            <img class="nav-ufo2" src="static/images/ufo.svg">
           </a>
+          <a><img class="nav-ufo2" src="static/images/ufo.svg">
+          </a>
+
+
+
         </div>
       </div>
     </nav>
     <div class="hero text-center">
       <h1>UFO Sightings</h1>
+      <br>
       <p>The Truth is Out There</p>
+      <br>
+      <h2>Find a Real UFO Spotted Near YOU!</h2>
     </div>
     <div class="container">
       <div class="row margin-top-50">
