--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -6,7 +6,7 @@
   <title>Find a Real UFO Near You!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Racing+Sans+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="static/css/style.css">
 </head>
 
@@ -17,13 +17,18 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">UFO Sightings
             <img class="nav-ufo" src="static/images/ufo.svg">
-            <img class="nav-ufo2" src="static/images/ufo.svg">
           </a>
           <a><img class="nav-ufo2" src="static/images/ufo.svg">
           </a>
-
-
-
+          </a>
+          <a><img class="nav-ufo3" src="static/images/ufo.svg">
+          </a>
+          </a>
+          <a><img class="nav-ufo4" src="static/images/ufo.svg">
+          </a>
+          </a>
+          <a><img class="nav-ufo5" src="static/images/ufo.svg">
+          </a>
         </div>
       </div>
     </nav>
@@ -78,6 +83,7 @@
     </div>
     <footer class="footer">
       <span class="bottom">UFO Sightings</span>
+      <a><img class="bottom-ufo" src="static/images/ufo.svg"></a>
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
