MRD: final updates

--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -16,19 +16,11 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">UFO Sightings
-            <img class="nav-ufo" src="static/images/ufo.svg">
-          </a>
-          <a><img class="nav-ufo2" src="static/images/ufo.svg">
-          </a>
-          </a>
-          <a><img class="nav-ufo3" src="static/images/ufo.svg">
-          </a>
-          </a>
-          <a><img class="nav-ufo4" src="static/images/ufo.svg">
-          </a>
-          </a>
-          <a><img class="nav-ufo5" src="static/images/ufo.svg">
-          </a>
+            <img class="nav-ufo" src="static/images/ufo.svg"></a>
+          <a><img class="nav-ufo2" src="static/images/ufo.svg"></a>
+          <a><img class="nav-ufo3" src="static/images/ufo.svg"></a>
+          <a><img class="nav-ufo4" src="static/images/ufo.svg"></a>
+          <a><img class="nav-ufo5" src="static/images/ufo.svg"></a>
         </div>
       </div>
     </nav>
