--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -6,7 +6,7 @@
   <title>UFO Finder</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Frijole&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="static/css/style.css">
 </head>
 
@@ -16,19 +16,11 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">UFO Sightings
-            <img class="nav-ufo" src="static/images/ufo.svg">
-          </a>
-          <a><img class="nav-ufo2" src="static/images/ufo.svg">
-          </a>
-          </a>
-          <a><img class="nav-ufo3" src="static/images/ufo.svg">
-          </a>
-          </a>
-          <a><img class="nav-ufo4" src="static/images/ufo.svg">
-          </a>
-          </a>
-          <a><img class="nav-ufo5" src="static/images/ufo.svg">
-          </a>
+            <img class="nav-ufo" src="static/images/ufo.svg"></a>
+          <a><img class="nav-ufo2" src="static/images/ufo.svg"></a>
+          <a><img class="nav-ufo3" src="static/images/ufo.svg"></a>
+          <a><img class="nav-ufo4" src="static/images/ufo.svg"></a>
+          <a><img class="nav-ufo5" src="static/images/ufo.svg"></a>
         </div>
       </div>
     </nav>
@@ -37,7 +29,8 @@
       <br>
       <p>The Truth is Out There</p>
       <br>
-      <h2>Find a Real UFO Spotted Near YOU!</h2>
+      <h2>Find a Real UFO Spotted Near</h2>
+      <h2>YOU!</h2>
     </div>
       <div class="container">
         <div class="row margin-top-50">
@@ -48,21 +41,20 @@
                 <div class="panel-body">
                   <form>
                     <div class="form-group">
-                        <ul class="list-group" id="filters">
-                          <li class="filter list-group-item">
-                            <label for="date">Enter a Date</label>
-                            <input class="form-control" id="datetime" type="text" placeholder="1/09/2010">
-                            <label for="date">Enter a City</label>
-                            <input class="form-control" id="city" type="text" placeholder="round rock">
-                            <label for="date">Enter a State</label>
-                            <input class="form-control" id="state" type="text" placeholder="tx">
-                            <label for="date">Enter a Country Name</label>
-                            <input class="form-control" id="country" type="text" placeholder="us">
-                            <label for="date">Enter a Shape</label>
-                            <input class="form-control" id="shape" type="text" placeholder="chevron">
-                          </li>
-                        </ul>
-                      </div>
+                      <ul class="list-group" id="filters">
+                        <li class="filter list-group-item">
+                          <label for="date">Enter a Date</label>
+                          <input class="form-control" id="datetime" type="text" placeholder="1/09/2010">
+                          <label for="date">Enter a City</label>
+                          <input class="form-control" id="city" type="text" placeholder="round rock">
+                          <label for="date">Enter a State</label>
+                          <input class="form-control" id="state" type="text" placeholder="tx">
+                          <label for="date">Enter a Country Name</label>
+                          <input class="form-control" id="country" type="text" placeholder="us">
+                          <label for="date">Enter a Shape</label>
+                          <input class="form-control" id="shape" type="text" placeholder="chevron">
+                        </li>
+                      </ul>
                     </div>
                     <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                   </form>
@@ -92,6 +84,7 @@
       </div>
     <footer class="footer">
       <span class="bottom">UFO Sightings</span>
+      <a><img class="bottom-ufo" src="static/images/ufo.svg"></a>
     </footer>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
